--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 
 	<!-- Bootstrapping UI5 -->
 	<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
@@ -20,19 +20,9 @@
 	<script>
 		sap.ui.getCore().attachInit(function () {
 			sap.ui.require([
-				"sap/m/Shell",
-				"sap/ui/core/ComponentContainer"
-			], function (Shell, ComponentContainer) {
-				// initialize the UI component
-				new Shell({
-					app: new ComponentContainer({
-						height: "100%",
-						name: "de.integrata.training.opentext",
-						settings: {
-							id: "opentext"
-						}
-					})
-				}).placeAt("content");
+				"sap/m/Text"
+			], function (Text) {
+				new Text({text: "Hallo Welt"}).placeAt("content");
 			});
 		});
 	</script>
